# pachi_demo

./: README.md
pachi_prj/: pyproject.toml
pachi_prj/pachi_prj/: main.py
pachi_prj/tests/: test_pachi_prj.py
